fix: 構文エラーを修正

--- a/.github/workflows/push-arm.yml
+++ b/.github/workflows/push-arm.yml
@@ -1,8 +1,9 @@
 name: Build and push docker image
 on:
+  push:
     paths:
     - 'image/arm/**'
-    - '.github/workflows/push-amd.yml'
+    - '.github/workflows/push-arm.yml'
 
 jobs:
   build-and-push:
