fix: PRに反応しないように

--- a/.github/workflows/push-amd.yml
+++ b/.github/workflows/push-amd.yml
@@ -1,6 +1,8 @@
 name: Amd-cloudflared-dockerBuild
 on:
   push:
+    branches:
+    - main
     paths:
     - 'image/**'
     - '.github/workflows/push-amd.yml'
