--- a/.github/workflows/push-arm.yml
+++ b/.github/workflows/push-arm.yml
@@ -1,6 +1,8 @@
 name: Arm-cloudflared-dockerBuild
 on:
   push:
+    branches:
+    - main
     paths:
     - 'image/arm/**'
     - '.github/workflows/push-arm.yml'
