--- a/.github/workflows/push-amd.yml
+++ b/.github/workflows/push-amd.yml
@@ -1,16 +1,15 @@
-name: Amd-cloudflared-dockerBuild
+name: Amd-dockerBuild
 on:
   push:
-    branches:
-    - main
     paths:
-    - 'image/**'
+    - 'image/amd/**'
     - '.github/workflows/push-amd.yml'
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     env:
+      VERSION: 2022.7.0-cloudflared22.7.0
       IMAGE_NAME: cloudflared-access-amd64
       TEAM: namagominetwork
     steps:
@@ -27,14 +26,11 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set outputs
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
-          context: ./image
+          context: ./image/amd
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/${{ env.TEAM }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/${{ env.TEAM }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
