--- a/.github/workflows/push-arm.yml
+++ b/.github/workflows/push-arm.yml
@@ -1,16 +1,15 @@
-name: Arm-cloudflared-dockerBuild
+name: Arm-dockerBuild
 on:
   push:
-    branches:
-    - main
     paths:
     - 'image/arm/**'
     - '.github/workflows/push-arm.yml'
 
 jobs:
-  Arm-cloudflared-build-and-push:
+  build-and-push:
     runs-on: ubuntu-latest
     env:
+      VERSION: 2022.7.0-cloudflared22.7.0
       IMAGE_NAME: cloudflared-access-arm64
       TEAM: namagominetwork
     steps:
@@ -34,16 +33,11 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # gitのcommit shaをtagにする
-      - name: Set outputs
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./image/arm
           platforms: linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ env.TEAM }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/${{ env.TEAM }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
